--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -25,7 +24,6 @@
     "eslint-config-next": "^14.2.30",
     "framer-motion": "^12.18.1",
     "next": "^14.2.30",
-    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "no-darkreader": "^1.0.3",
     "postcss": "^8.5.5",
